dashboard2 mit PrimeFaces

--- a/src/main/webapp/resources/styles/basic.css
+++ b/src/main/webapp/resources/styles/basic.css
@@ -30,3 +30,8 @@ table.noborder td {
 .ui-cell-editor-output {
 	white-space:normal;
 }
+
+h1 {
+	text-align: center;
+	padding: 10px 0px 0px 0px;
+}
