--- a/src/main/webapp/templates/nav.xhtml
+++ b/src/main/webapp/templates/nav.xhtml
@@ -14,7 +14,9 @@
 
 				<b:navCommandLink value="Tickets" action="/pages/tickets.xhtml?faces-redirect=true" immediate="true" />
 
-				<b:navCommandLink value="Test" action="/pages/testlol.xhtml?faces-redirect=true" immediate="true" />
+				<b:navCommandLink value="Dashboard" action="/pages/dashboard.xhtml?faces-redirect=true" immediate="true" />
+
+				<b:navCommandLink value="Dashboard 2" action="/pages/dashboard2.xhtml?faces-redirect=true" immediate="true" />
 
 				<b:navCommandLink value="Login" action="#{securityBean.login()}" rendered="#{not securityBean.authenticated}" />
 
