--- a/src/main/webapp/templates/nav.xhtml
+++ b/src/main/webapp/templates/nav.xhtml
@@ -10,10 +10,18 @@
 		<b:navBar brand="#{msgs['nav.bar.brand']}" brand-href="#" fixed="top" inverse="true">
 			<b:navbarLinks>
 
-				<b:dropMenu value="Editor" rendered="#{securityBean.isUserInRole('editor')}">
+				<ui:define name="Admin" rendered="#{securityBean.isUserInRole('admin')}">
+				</ui:define>
+
+				<ui:define name="Editor" rendered="#{securityBean.isUserInRole('editor')}">
 					<b:navCommandLink value="Home" action="/pages/editor/home.xhtml?faces-redirect=true" immediate="true" />
 					<b:navCommandLink value="Tickets" action="/pages/editor/tickets.xhtml?faces-redirect=true" immediate="true" />
-				</b:dropMenu>
+				</ui:define>
+
+				<ui:define name="Customer" rendered="#{securityBean.isUserInRole('customer')}">
+					<b:navCommandLink value="Home" action="/pages/customer/home.xhtml?faces-redirect=true" immediate="true" />
+					<b:navCommandLink value="Tickets" action="/pages/customer/tickets.xhtml?faces-redirect=true" immediate="true" />
+				</ui:define>
 
 				<b:navCommandLink value="Login" action="#{securityBean.login()}" rendered="#{not securityBean.authenticated}" />
 
