--- a/src/main/webapp/templates/nav.xhtml
+++ b/src/main/webapp/templates/nav.xhtml
@@ -9,22 +9,16 @@
 	<h:form>
 		<b:navBar brand="#{msgs['nav.bar.brand']}" brand-href="#" fixed="top" inverse="true">
 			<b:navbarLinks>
+				
+				<b:navCommandLink value="Users" action="/pages/admin/users.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('admin')}" />
+				<b:navCommandLink value="Tickets" action="/pages/admin/tickets.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('admin')}" />
 
-				<b:dropMenu value="Admin" rendered="#{securityBean.isUserInRole('admin')}">
-					<b:navCommandLink value="Users" action="/pages/admin/users.xhtml?faces-redirect=true" immediate="true" />
-					<b:navCommandLink value="Tickets" action="/pages/admin/tickets.xhtml?faces-redirect=true" immediate="true" />
-				</b:dropMenu>
+				<b:navCommandLink value="Home" action="/pages/editor/home.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('editor')}" />
+				<b:navCommandLink value="Tickets" action="/pages/editor/tickets.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('editor')}" />
 
-				<b:dropMenu value="Editor" rendered="#{securityBean.isUserInRole('editor')}">
-					<b:navCommandLink value="Home" action="/pages/editor/home.xhtml?faces-redirect=true" immediate="true" />
-					<b:navCommandLink value="Tickets" action="/pages/editor/tickets.xhtml?faces-redirect=true" immediate="true" />
-				</b:dropMenu>
-
-				<b:dropMenu value="Customer" rendered="#{securityBean.isUserInRole('customer')}">
-					<b:navCommandLink value="Home" action="/pages/customer/home.xhtml?faces-redirect=true" immediate="true" />
-					<b:navCommandLink value="Tickets" action="/pages/customer/tickets.xhtml?faces-redirect=true" immediate="true" />
-					<b:navCommandLink value="Create Ticket" action="/pages/customer/create.xhtml?faces-redirect=true" immediate="true" />
-				</b:dropMenu>
+				<b:navCommandLink value="Home" action="/pages/customer/home.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('customer')}" />
+				<b:navCommandLink value="Tickets" action="/pages/customer/tickets.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('customer')}" />
+				<b:navCommandLink value="Create Ticket" action="/pages/customer/create.xhtml?faces-redirect=true" immediate="true" rendered="#{securityBean.isUserInRole('customer')}" />
 
 				<b:navCommandLink value="Login" action="#{securityBean.login()}" rendered="#{not securityBean.authenticated}" />
 
