--- a/src/main/webapp/resources/styles/ticket.css
+++ b/src/main/webapp/resources/styles/ticket.css
@@ -4,17 +4,14 @@
 
 .center {
     margin: auto;
-    width: 500px;
+    width: 900px;
 }
 
-#loginPanel {
+#newTicketPanel {
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-#loginPanelGridInfo {
-    margin-bottom: 10px;
-}
-
-#loginPanelGridInput, #j_username, #j_password {
+#newTicketPanelGrid, #inputSubject, #inputEntry {
     width: 100%;
 }
