--- a/src/main/webapp/templates/nav.xhtml
+++ b/src/main/webapp/templates/nav.xhtml
@@ -52,6 +52,7 @@
 
 				<!-- Logout for all Roles -->
 				<b:navbarLinks>
+					<b:navCommandLink value="FAQ" action="/pages/help.xhtml?faces-redirect=true" immediate="true" />
 					<b:dropMenu value="Benutzer: #{securityBean.user.name}">
 						<b:navCommandLink value="Mein Profil" action="/pages/my-profile.xhtml?faces-redirect=true" immediate="true"  />
 						<b:navCommandLink value="Abmelden" action="#{securityBean.logout()}" ajax="false" />
