--- a/src/main/webapp/resources/styles/myProfile.css
+++ b/src/main/webapp/resources/styles/myProfile.css
@@ -22,14 +22,12 @@
 }
 
 .panelGridCenterAndTop {
-    margin: 0 auto;
     width: 500px;
-    margin-top: 60px;
+    margin: 60px auto 0;
 
 }
 
 .commandButton {
-    margin: 0 auto;
     width: 500px;
-margin-top: 20px;
+    margin: 20px auto 0;
 }
