Fix frontpage first entry top-margin

--- a/src/main/webapp/resources/styles/details-ticket.css
+++ b/src/main/webapp/resources/styles/details-ticket.css
@@ -17,6 +17,10 @@
     padding-left: 25px;
 }
 
+.buttons {
+    margin-top: 20px;
+}
+
 #ticketDetailsPanelGridButtons {
     margin-bottom: 10px;
 }
