--- a/src/main/webapp/resources/styles/search-tickets.css
+++ b/src/main/webapp/resources/styles/search-tickets.css
@@ -30,8 +30,14 @@
 }
 
 #searchInput {
+    margin-top: 10px;
     width: 100%;
 }
+
+#statusPanel {
+    padding-right: 30px;
+    border: none;
+ }
 
 .ui-datascroller .ui-datascroller-item {
     border-bottom: 1px solid #A8A8A8;
