--- a/src/main/webapp/templates/nav.xhtml
+++ b/src/main/webapp/templates/nav.xhtml
@@ -51,10 +51,10 @@
 				</b:navbarLinks>
 
 				<!-- Logout for all Roles -->
-				<b:navbarLinks>
-					<b:navCommandLink value="FAQ" action="/pages/help.xhtml?faces-redirect=true" immediate="true" />
-					<b:dropMenu value="Benutzer: #{securityBean.user.name}">
-						<b:navCommandLink value="Mein Profil" action="/pages/my-profile.xhtml?faces-redirect=true" immediate="true"  />
+				<b:navbarLinks rendered="#{securityBean.authenticated}">
+					<b:navCommandLink value="FAQ" action="/pages/internal/help.xhtml?faces-redirect=true" immediate="true" />
+					<b:dropMenu value="Benutzer: #{securityBean.user.name}" >
+						<b:navCommandLink value="Mein Profil" action="/pages/internal/my-profile.xhtml?faces-redirect=true" immediate="true"  />
 						<b:navCommandLink value="Abmelden" action="#{securityBean.logout()}" ajax="false" />
 					</b:dropMenu>
 				</b:navbarLinks>
